--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,16 @@
   "version": "1.0.0",
   "description": "Backend for AI-powered D&D game",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BradReaney/AI-Powered-DnD-Game.git"
+  },
+  "homepage": "https://github.com/BradReaney/AI-Powered-DnD-Game#readme",
+  "bugs": {
+    "url": "https://github.com/BradReaney/AI-Powered-DnD-Game/issues"
+  },
+  "author": "Brad Reaney",
+  "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
