--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,16 @@
   "name": "ai-powered-dnd-game-frontend",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BradReaney/AI-Powered-DnD-Game.git"
+  },
+  "homepage": "https://github.com/BradReaney/AI-Powered-DnD-Game#readme",
+  "bugs": {
+    "url": "https://github.com/BradReaney/AI-Powered-DnD-Game/issues"
+  },
+  "author": "Brad Reaney",
+  "license": "MIT",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
