--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "1.0.0",
   "description": "AI-Powered D&D Game - Full Stack Application",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BradReaney/AI-Powered-DnD-Game.git"
+  },
+  "homepage": "https://github.com/BradReaney/AI-Powered-DnD-Game#readme",
+  "bugs": {
+    "url": "https://github.com/BradReaney/AI-Powered-DnD-Game/issues"
+  },
+  "author": "Brad Reaney",
+  "license": "MIT",
   "workspaces": [
     "frontend",
     "backend"
