feat: Complete environment variables migration for Railway deployment
- Remove all hardcoded localhost URLs from codebase
- Update docker-compose.yml to use environment variables
- Add environment variable validation in frontend components
- Update Next.js API routes to require BACKEND_URL
- Remove hardcoded fallbacks from backend config
- Create comprehensive environment variable documentation
- Add Railway-specific environment templates
- Set BACKEND_URL environment variable in Railway frontend service

This migration ensures the application works correctly in both local Docker development and Railway production environments.

--- a/config/env.example
+++ b/config/env.example
@@ -2,15 +2,20 @@
 PORT=5001
 NODE_ENV=development
 
-# Port Configuration
-# PORT: Backend server port (5001)
-# FRONTEND_PORT: Frontend Next.js port (3000)
-
 # MongoDB Configuration
 MONGO_ROOT_USERNAME=admin
 MONGO_ROOT_PASSWORD=password
+# For local development: mongodb://localhost:27017/ai-dnd-game
+# For Railway: mongodb+srv://username:password@cluster.mongodb.net/ai-dnd-game
 MONGODB_URI=mongodb://localhost:27017/ai-dnd-game
+# For Railway production: mongodb+srv://username:password@cluster.mongodb.net/ai-dnd-game-prod
 MONGODB_URI_PROD=mongodb://localhost:27017/ai-dnd-game-prod
+
+# Redis Configuration
+# For local development: localhost
+# For Railway: your-redis-service.railway.app
+REDIS_HOST=localhost
+REDIS_PASSWORD=
 
 # Google Gemini AI Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
@@ -27,8 +32,13 @@ FLASH_RESPONSE_TIME_THRESHOLD=5000
 
 # Security Configuration
 JWT_SECRET=your_jwt_secret_here_change_in_production
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001,http://localhost:3002
 SESSION_SECRET=your_session_secret_here_change_in_production
+# For local development: http://localhost:3000
+# For Railway: https://your-frontend-service.railway.app
+CORS_ORIGIN=http://localhost:3000
+# For local development: http://localhost:3000
+# For Railway: https://your-frontend-service.railway.app
+FRONTEND_URL=http://localhost:3000
 
 # Logging Configuration
 LOG_LEVEL=info
@@ -45,36 +55,16 @@ SESSION_MAX_AGE=86400000
 MAX_CONTEXT_LENGTH=8000
 CONTEXT_COMPRESSION_THRESHOLD=6000
 
-# Frontend Configuration (Next.js)
+# Frontend Configuration
+# For local development: http://localhost:5001
+# For Railway: https://your-backend-service.railway.app
 NEXT_PUBLIC_API_URL=http://localhost:5001
 NEXT_PUBLIC_APP_NAME=AI-Powered D&D Game
 FRONTEND_PORT=3000
 
-# Docker Configuration
-# BACKEND_URL: Used by Next.js API routes to communicate with backend container
-# Note: This should be the service name (e.g., 'http://backend:5001') for container-to-container communication
-BACKEND_URL=http://backend:5001
-
-# Redis Configuration (optional)
-REDIS_PASSWORD=
-
-# =============================================================================
-# IMPORTANT NOTES FOR DOCKER SETUP
-# =============================================================================
-#
-# CORS Configuration:
-# - CORS_ORIGIN should include all frontend ports that might be used during development
-# - Multiple ports are supported: http://localhost:3000,http://localhost:3001,http://localhost:3002
-#
-# Docker Environment Variables:
-# - NEXT_PUBLIC_API_URL: Used by browser (client-side) - must be accessible from host
-# - BACKEND_URL: Used by Next.js API routes (server-side) - uses Docker service names
-#
-# Port Conflicts:
-# - If you get "address already in use" errors, ensure no local npm/ts-node processes are running
-# - Use 'docker-compose up' instead of 'npm run dev' to avoid port conflicts
-#
-# AI Integration:
-# - GEMINI_API_KEY must be a valid API key for AI story generation to work
-# - The backend will automatically fall back between different Gemini models if needed
-# - Test the AI integration at /test-ai route in the frontend
+# Docker & Railway Configuration
+# IMPORTANT: This is for server-side API routes (Next.js API routes)
+# For local development: http://localhost:5001
+# For Docker: http://backend:5001 (Docker service name)
+# For Railway: https://your-backend-service.railway.app
+BACKEND_URL=http://localhost:5001
