feat: Implement comprehensive GitHub Actions quality checks
- Add GitHub Actions workflows for automated quality enforcement
- Create quality-checks.yml for main/develop branches
- Create quick-quality-check.yml for feature branches
- Add pull request template with quality checklist
- Add branch protection documentation
- Create local quality check script (npm run quality:local)
- Fix backend TypeScript version warning suppression
- Fix frontend avatar component TypeScript issues
- Update quality check summary to reflect 100% status
- Add quality:local script to root package.json

This ensures the project maintains its PERFECT 100/100 quality score
through automated enforcement on every pull request.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "quality:fix": "npm run quality:fix:backend && npm run quality:fix:frontend",
     "quality:fix:frontend": "cd frontend && npm run quality:fix",
     "quality:fix:backend": "cd backend && npm run quality:fix",
+    "quality:local": "./scripts/local-quality-check.sh",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
     "clean": "rm -rf frontend/dist backend/dist frontend/node_modules backend/node_modules node_modules",
     "docker:up": "docker-compose up -d",
