--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -26,7 +26,6 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
 
       - name: Install backend dependencies
         working-directory: ./backend
@@ -52,20 +51,19 @@ jobs:
         working-directory: ./backend
         run: npm run build
 
-  frontend-quality:
+    frontend-quality:
     name: Frontend Quality Checks
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+        
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Install frontend dependencies
         working-directory: ./frontend
@@ -134,9 +132,9 @@ jobs:
 
       - name: Test Docker Compose build
         run: |
-          docker-compose config
-          docker-compose build --no-cache backend
-          docker-compose build --no-cache frontend
+          docker compose config
+          docker compose build --no-cache backend
+          docker compose build --no-cache frontend
 
   quality-report:
     name: Quality Report
