fix: Fix npm cache configuration in GitHub Actions workflows
- Add proper cache-dependency-path for backend and frontend package-lock.json files
- Fix separate Node.js setup for backend and frontend in quick-quality-check.yml
- Ensure dependencies are properly cached and installed in each job
- Resolve TypeScript compilation failures due to missing dependencies

This should fix the 'Cannot find module' errors in the backend TypeScript checks.

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -16,7 +16,7 @@ jobs:
   backend-quality:
     name: Backend Quality Checks
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,6 +26,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
 
       - name: Install backend dependencies
         working-directory: ./backend
@@ -51,7 +52,7 @@ jobs:
         working-directory: ./backend
         run: npm run build
 
-    frontend-quality:
+  frontend-quality:
     name: Frontend Quality Checks
     runs-on: ubuntu-latest
     
@@ -64,6 +65,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Install frontend dependencies
         working-directory: ./frontend
