--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lint": "next lint",
     "start": "next start",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
