--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -16,7 +16,7 @@ jobs:
   backend-quality:
     name: Backend Quality Checks
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -49,11 +49,11 @@ jobs:
   frontend-quality:
     name: Frontend Quality Checks
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -103,27 +103,10 @@ jobs:
         working-directory: ./frontend
         run: npx playwright --version
 
-  docker-build:
-    name: Docker Build Test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Test Docker Compose build
-        run: |
-          docker compose config
-          docker compose build --no-cache backend
-          docker compose build --no-cache frontend
-
   quality-report:
     name: Quality Report
     runs-on: ubuntu-latest
-    needs: [backend-quality, frontend-quality, e2e-tests, docker-build]
+    needs: [backend-quality, frontend-quality, e2e-tests]
     if: always()
 
     steps:
@@ -137,10 +120,9 @@ jobs:
           echo "### Backend Quality: ${{ needs.backend-quality.result == 'success' && '✅ PASSED' || '❌ FAILED' }}" >> $GITHUB_STEP_SUMMARY
           echo "### Frontend Quality: ${{ needs.frontend-quality.result == 'success' && '✅ PASSED' || '❌ FAILED' }}" >> $GITHUB_STEP_SUMMARY
           echo "### E2E Tests: ${{ needs.e2e-tests.result == 'success' && '✅ PASSED' || '❌ FAILED' }}" >> $GITHUB_STEP_SUMMARY
-          echo "### Docker Build: ${{ needs.docker-build.result == 'success' && '✅ PASSED' || '❌ FAILED' }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          if [[ "${{ needs.backend-quality.result }}" == "success" && "${{ needs.frontend-quality.result }}" == "success" && "${{ needs.e2e-tests.result }}" == "success" && "${{ needs.docker-build.result }}" == "success" ]]; then
+          if [[ "${{ needs.backend-quality.result }}" == "success" && "${{ needs.frontend-quality.result }}" == "success" && "${{ needs.e2e-tests.result }}" == "success" ]]; then
             echo "🎉 **All quality checks passed!** The project maintains its 100% quality status." >> $GITHUB_STEP_SUMMARY
           else
             echo "⚠️ **Some quality checks failed.** Please review the logs above and fix any issues." >> $GITHUB_STEP_SUMMARY
