--- a/.github/workflows/quick-quality-check.yml
+++ b/.github/workflows/quick-quality-check.yml
@@ -41,3 +41,7 @@ jobs:
       - name: Frontend linting
         working-directory: ./frontend
         run: npm run lint
+
+      - name: Quick test run
+        working-directory: ./frontend
+        run: npm test -- --passWithNoTests --maxWorkers=2
