--- a/config/env.example
+++ b/config/env.example
@@ -12,11 +12,17 @@ MONGODB_URI=mongodb://mongodb:27017/ai-dnd-game
 MONGODB_URI_PROD=mongodb://mongodb:27017/ai-dnd-game-prod
 
 # Redis Configuration
-REDIS_HOST=redis
+REDIS_HOST=redis                    # Docker service name
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=
 REDIS_HOST_INTERNAL=redis
+
+# Redis Cache Management
+CLEAR_CACHE_ON_DEPLOY=false         # Set to true to clear cache on deployment
+CACHE_CLEAR_PATTERNS=user-sessions:*,game-state:*,ai:response:*  # Cache patterns to clear
+CACHE_CLEAR_ON_STARTUP=false        # Set to true to clear cache on application startup
+CACHE_PRESERVE_PATTERNS=mechanics:*,templates:*  # Cache patterns to preserve during clearing
 
 # Google Gemini AI Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
