fix: resolve jest testing infrastructure and improve test reliability
- Fix Jest TypeScript configuration using ts-jest createDefaultPreset
- Integrate @shelf/jest-mongodb for in-memory MongoDB testing
- Resolve Mongoose Schema.Types errors in tests
- Fix Redis mocking using ioredis-mock
- Resolve worker process cleanup issues with CacheService mocking
- Update MongoDB configuration to use version 7.0.0
- Fix code formatting and linting issues across backend and frontend
- Improve test setup and mock configurations
- Fix campaign-character selector issue for newly created campaigns

Resolves major Jest configuration issues that were preventing tests from running.
Tests now execute successfully with proper MongoDB integration and mocking.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,17 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    develop:
+      watch:
+        - action: rebuild
+          path: ./backend/src
+        - action: sync
+          path: ./backend
+          target: /app
+          ignore:
+            - node_modules/
+            - dist/
+            - logs/
 
   # Frontend
   frontend:
@@ -91,6 +102,17 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    develop:
+      watch:
+        - action: rebuild
+          path: ./frontend/src
+        - action: sync
+          path: ./frontend
+          target: /app
+          ignore:
+            - node_modules/
+            - .next/
+            - dist/
 
   # Redis Cache
   redis:
@@ -135,6 +157,16 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    develop:
+      watch:
+        - action: rebuild
+          path: ./mock-llm-service/src
+        - action: sync
+          path: ./mock-llm-service
+          target: /app
+          ignore:
+            - node_modules/
+            - dist/
 
 volumes:
   mongodb_data:
