--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@shelf/jest-mongodb": "^5.2.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -60,6 +61,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
+    "ioredis-mock": "^8.9.0",
     "jest": "^29.7.0",
     "lint-staged": "^16.1.5",
     "mongodb-memory-server": "^10.2.0",
