feat: implement character name similarity detection
- Add CharacterNameSimilarityService with progressive identification logic
- Integrate similarity detection into CharacterService and gameplay routes
- Add comprehensive test suite with 26 passing tests
- Add environment variable configuration for similarity thresholds
- Update plans documentation with implementation details

Fixes issue where characters like 'The old man', 'Old Finnan', and 'Finnan'
were being treated as different people instead of the same person.

--- a/config/env.example
+++ b/config/env.example
@@ -56,6 +56,12 @@ SESSION_MAX_AGE=86400000
 MAX_CONTEXT_LENGTH=8000
 CONTEXT_COMPRESSION_THRESHOLD=6000
 
+# Character Name Similarity Configuration
+CHARACTER_SIMILARITY_CONFIDENCE_THRESHOLD=80
+CHARACTER_SIMILARITY_MIN_SCORE=70
+CHARACTER_SIMILARITY_MAX_EDIT_DISTANCE_SHORT=2
+CHARACTER_SIMILARITY_MAX_EDIT_DISTANCE_LONG=3
+
 # Frontend Configuration
 NEXT_PUBLIC_API_URL=http://localhost:5001
 NEXT_PUBLIC_APP_NAME=AI-Powered D&D Game
