--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.7.0",
     "joi": "^17.11.0",
+    "leven": "^3.1.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.4",
