--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,10 +60,11 @@ services:
     networks:
       - dnd-game-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${PORT:-5001}/health"]
-      interval: 30s
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${PORT:-5001}/health/light"]
+      interval: 60s
       timeout: 10s
-      retries: 3
+      retries: 2
+      start_period: 30s
     develop:
       watch:
         - action: rebuild
