--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -2,20 +2,46 @@ name: Quality Checks
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   workflow_dispatch:
 
 env:
-  NODE_VERSION: '18'
-  BACKEND_URL: 'http://localhost:5001'
-  NEXT_PUBLIC_API_URL: 'http://localhost:5001'
+  NODE_VERSION: "18"
+  BACKEND_URL: "http://localhost:5001"
+  NEXT_PUBLIC_API_URL: "http://localhost:5001"
 
 jobs:
+  install-dependencies:
+    name: Install Dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
+
+      - name: Install all dependencies
+        run: npm ci
+
+      - name: Upload dependencies cache
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-modules
+          path: |
+            node_modules/
+            backend/node_modules/
+            frontend/node_modules/
+
   backend-quality:
     name: Backend Quality Checks
     runs-on: ubuntu-latest
+    needs: install-dependencies
 
     steps:
       - name: Checkout code
@@ -25,10 +51,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
 
-      - name: Install all dependencies
-        run: npm ci
+      - name: Download dependencies cache
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules
+          path: .
 
       - name: Run backend linting
         working-directory: ./backend
@@ -45,6 +73,7 @@ jobs:
   frontend-quality:
     name: Frontend Quality Checks
     runs-on: ubuntu-latest
+    needs: install-dependencies
 
     steps:
       - name: Checkout code
@@ -54,10 +83,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
 
-      - name: Install all dependencies
-        run: npm ci
+      - name: Download dependencies cache
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules
+          path: .
 
       - name: Run frontend linting
         working-directory: ./frontend
@@ -74,6 +105,7 @@ jobs:
   e2e-tests:
     name: End-to-End Tests
     runs-on: ubuntu-latest
+    needs: install-dependencies
 
     steps:
       - name: Checkout code
@@ -83,10 +115,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
 
-      - name: Install all dependencies
-        run: npm ci
+      - name: Download dependencies cache
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules
+          path: .
 
       - name: Verify Playwright configuration
         working-directory: ./frontend
