fix: update github actions workflow to use npx and set correct path
- Add PATH setup step to include node_modules/.bin in each job
- Replace npm run commands with direct npx calls for better reliability
- Fix 'command not found' errors in quality check jobs
- Ensure eslint, prettier, and other tools are accessible from cache

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -58,13 +58,16 @@ jobs:
           name: node-modules
           path: .
 
+      - name: Set PATH for node_modules binaries
+        run: echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
+
       - name: Run backend linting
         working-directory: ./backend
-        run: npm run lint
+        run: npx eslint src/**/*.ts
 
       - name: Check backend formatting
         working-directory: ./backend
-        run: npm run format:check
+        run: npx prettier --check src/**/*.ts
 
       - name: Run backend TypeScript compilation
         working-directory: ./backend
@@ -90,13 +93,16 @@ jobs:
           name: node-modules
           path: .
 
+      - name: Set PATH for node_modules binaries
+        run: echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
+
       - name: Run frontend linting
         working-directory: ./frontend
-        run: npm run lint
+        run: npx eslint . --ext .ts,.tsx
 
       - name: Check frontend formatting
         working-directory: ./frontend
-        run: npm run format:check
+        run: npx prettier --check . --ext .ts,.tsx
 
       - name: Run frontend TypeScript compilation
         working-directory: ./frontend
@@ -121,6 +127,9 @@ jobs:
         with:
           name: node-modules
           path: .
+
+      - name: Set PATH for node_modules binaries
+        run: echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
 
       - name: Verify Playwright configuration
         working-directory: ./frontend
