--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -13,9 +13,10 @@ env:
   NEXT_PUBLIC_API_URL: "http://localhost:5001"
 
 jobs:
-  install-dependencies:
-    name: Install Dependencies
+  backend-quality:
+    name: Backend Quality Checks
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,45 +30,13 @@ jobs:
       - name: Install all dependencies
         run: npm ci
 
-      - name: Upload dependencies cache
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-modules
-          path: |
-            node_modules/
-            backend/node_modules/
-            frontend/node_modules/
-
-  backend-quality:
-    name: Backend Quality Checks
-    runs-on: ubuntu-latest
-    needs: install-dependencies
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: Download dependencies cache
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: .
-
-      - name: Set PATH for node_modules binaries
-        run: echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
-
       - name: Run backend linting
         working-directory: ./backend
-        run: npx eslint src/**/*.ts
+        run: npm run lint
 
       - name: Check backend formatting
         working-directory: ./backend
-        run: npx prettier --check src/**/*.ts
+        run: npm run format:check
 
       - name: Run backend TypeScript compilation
         working-directory: ./backend
@@ -76,7 +45,6 @@ jobs:
   frontend-quality:
     name: Frontend Quality Checks
     runs-on: ubuntu-latest
-    needs: install-dependencies
 
     steps:
       - name: Checkout code
@@ -86,23 +54,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
 
-      - name: Download dependencies cache
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: .
-
-      - name: Set PATH for node_modules binaries
-        run: echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
+      - name: Install all dependencies
+        run: npm ci
 
       - name: Run frontend linting
         working-directory: ./frontend
-        run: npx eslint . --ext .ts,.tsx
+        run: npm run lint
 
       - name: Check frontend formatting
         working-directory: ./frontend
-        run: npx prettier --check . --ext .ts,.tsx
+        run: npm run format:check
 
       - name: Run frontend TypeScript compilation
         working-directory: ./frontend
@@ -111,7 +74,6 @@ jobs:
   e2e-tests:
     name: End-to-End Tests
     runs-on: ubuntu-latest
-    needs: install-dependencies
 
     steps:
       - name: Checkout code
@@ -121,15 +83,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
 
-      - name: Download dependencies cache
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: .
-
-      - name: Set PATH for node_modules binaries
-        run: echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
+      - name: Install all dependencies
+        run: npm ci
 
       - name: Verify Playwright configuration
         working-directory: ./frontend
