--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
+    "test:ci": "jest --ci --coverage --watchAll=false --maxWorkers=2",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:debug": "jest --detectOpenHandles --forceExit",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write .",
@@ -64,6 +68,7 @@
     "husky": "^9.1.7",
     "ioredis-mock": "^8.9.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^16.1.5",
     "mongodb-memory-server": "^10.2.0",
     "prettier": "^3.6.2",
