--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:ci": "jest --ci --coverage --watchAll=false --maxWorkers=2",
+    "test:debug": "jest --detectOpenHandles --forceExit",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
@@ -101,6 +102,7 @@
     "eslint-config-next": "^15.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.1.1",
+    "jest-junit": "^16.0.0",
     "postcss": "^8.5",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.9",
