fix: address ci environment issues for testing infrastructure
- Update Node.js version from 18 to 20 to fix dependency compatibility
- Fix TypeScript mock implementations in Jest setup (Storage, WebSocket)
- Update Docker Compose commands to use v2 syntax for CI compatibility
- Update testing infrastructure plan with identified issues and fixes

These changes address the main CI blocking issues:
1. Node.js version compatibility for frontend tests
2. TypeScript compilation errors in Jest mocks
3. Docker Compose availability in GitHub Actions

Next steps: Test the fixes in CI and address remaining test failures.

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  NODE_VERSION: "18"
+  NODE_VERSION: "20"
   BACKEND_URL: "http://localhost:5001"
   NEXT_PUBLIC_API_URL: "http://localhost:5001"
 
@@ -172,7 +172,7 @@ jobs:
 
       - name: Start Docker Compose services
         run: |
-          docker-compose -f docker-compose.ci.yml up -d
+          docker compose -f docker-compose.ci.yml up -d
           echo "Waiting for services to be ready..."
           sleep 30
 
@@ -229,7 +229,7 @@ jobs:
 
       - name: Stop Docker Compose services
         if: always()
-        run: docker-compose -f docker-compose.ci.yml down
+        run: docker compose -f docker-compose.ci.yml down
 
   quality-report:
     name: Quality Report
