fix: resolve remaining ci environment issues
- Fix husky prepare script to be conditional on CI environment
  - Prevents frontend unit tests from failing during dependency installation
  - Only runs husky install when not in CI
- Fix mock-llm-service Dockerfile for E2E tests
  - Install all dependencies (including TypeScript) for build
  - Remove dev dependencies after build to reduce image size
  - Fixes 'tsc: not found' error in CI

These changes address the remaining CI blocking issues:
1. Frontend unit tests can now install dependencies successfully
2. E2E test services can start properly with working mock LLM service

Next: Test the fixes in CI to verify all jobs pass successfully.

--- a/mock-llm-service/Dockerfile
+++ b/mock-llm-service/Dockerfile
@@ -5,14 +5,18 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install all dependencies (including dev dependencies for build)
+RUN npm ci
 
 # Copy source code
 COPY . .
 
 # Build the application
 RUN npm run build
+
+# Remove dev dependencies and source code to reduce image size
+RUN npm prune --production
+RUN rm -rf src/ tests/ *.test.ts
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs
