--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: "**/package-lock.json"
 
       - name: Install frontend dependencies
         working-directory: ./frontend
@@ -67,7 +67,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: "**/package-lock.json"
 
       - name: Install frontend dependencies
         working-directory: ./frontend
@@ -114,19 +114,6 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-      mock-llm:
-        image: mcr.microsoft.com/playwright:v1.46.0-jammy
-        ports:
-          - 5002:5002
-        env:
-          NODE_ENV: test
-          PORT: 5002
-        options: >-
-          --health-cmd "curl -f http://localhost:5002/health || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -136,7 +123,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: "**/package-lock.json"
 
       - name: Install backend dependencies
         working-directory: ./backend
@@ -166,7 +153,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: "**/package-lock.json"
 
       - name: Install backend dependencies
         working-directory: ./backend
